<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.androidhive.sqlite.org.androidhive.sqlite.view.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:orderInCategory="101"
        android:title="@string/action_backup_restore_menu"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/action_backup"
                android:title="@string/action_backup"/>

            <item
                android:id="@+id/action_restore"
                android:title="@string/action_restore"/>

        </menu>

    </item>
    
    <item
        android:id="@+id/action_log_viewer"
        android:icon="@drawable/ic_baseline_timeline_24px"
        android:orderInCategory="102"
        android:title="@string/action_log_viewer"
        app:showAsAction="never|ifRoom" />

    <item
        android:id="@+id/action_logs_list"
        android:icon="@drawable/ic_poll_24px"
        android:orderInCategory="103"
        android:title="@string/action_logs_list"
        app:showAsAction="never|ifRoom" />

    <item
        android:icon="@drawable/ic_connection_error"
        android:title="@string/menu_option_roaster_status"
        android:visible="false"
        app:showAsAction="never|always" />


</menu>
