<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    tools:context=".view.LogViewerActivity">

    <RelativeLayout
        android:id="@+id/log_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_default="spread"
        tools:layout_editor_absoluteY="-103dp" />

    <TextView
        android:id="@+id/text_development"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.2"
        android:gravity="center"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_log_view_back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:background="@color/colorPrimary"
        android:longClickable="true"
        android:tint="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24px" />

    <ImageButton
        android:id="@+id/button_log_view_comments"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="14dp"
        android:background="@color/colorPrimary"
        android:longClickable="true"
        android:tint="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/button_log_view_back"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_insert_comment_24px" />

    <ImageButton
        android:id="@+id/button_log_view_add_event"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="14dp"
        android:background="@color/colorPrimary"
        android:longClickable="true"
        android:tint="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/button_log_view_comments"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_24px" />

    <Switch
        android:id="@+id/switch_scroll_screen"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="14dp"
        android:autoText="false"
        android:checked="true"
        android:text="@string/switch_auto_scroll_text"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:typeface="normal"
        app:layout_constraintLeft_toRightOf="@+id/button_log_view_add_event"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_log_start_stop"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="14dp"
        android:background="@color/colorPrimary"
        android:longClickable="true"
        android:tint="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/switch_scroll_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_play_pause_24px" />

    <Button
        android:id="@+id/button_log_view_clear_and_save"
        android:layout_width="66dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:text="@string/lbl_save_and_clear"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/button_log_start_stop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_log_view_scroll_left"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="&lt;"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_log_view_scroll_right"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="&gt;"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switch_show_power"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:autoText="false"
        android:checked="false"
        android:text="@string/switch_show_power_text"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_log_view_back" />

</android.support.constraint.ConstraintLayout>